<resources>
    <string name="app_name">JetpackStudy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_login">登录</string>
    <string name="hint_name">输入姓名</string>
    <string name="hint_pwd">输入密码</string>
    <string name="text_name">姓名</string>
    <string name="text_pwd">密码</string>
    <string name="request">请求</string>
</resources>